[gd_scene load_steps=4 format=3 uid="uid://tqf7nv3hegdk"]

[ext_resource type="Texture2D" uid="uid://bh020u5j62doj" path="res://crawl-tiles Oct-5-2010/crawl-tiles Oct-5-2010/item/weapon/artefact/spwpn_singing_sword.png" id="1_6pl4p"]
[ext_resource type="Script" path="res://sword.gd" id="1_pecxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl610"]
size = Vector2(7, 30)

[node name="Sword" type="Area2D"]
visible = false
script = ExtResource("1_pecxt")

[node name="SpwpnSingingSword" type="Sprite2D" parent="."]
position = Vector2(-0.372585, -4.23045)
rotation = -0.785398
texture = ExtResource("1_6pl4p")
offset = Vector2(10, -10)

[node name="SwordAttackCoolDownTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.372565, -26.2304)
shape = SubResource("RectangleShape2D_sl610")
disabled = true

[connection signal="timeout" from="SwordAttackCoolDownTimer" to="." method="_on_sword_attack_cool_down_timer_timeout"]
